--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -33,9 +33,10 @@ jobs:
         with:
           node-version: 18
       - name: Install dependencies
+        run: npm i -g @angular/cli
         run: npm install
       - name: Build Angular app with AOT
-        run: npm run ng build --aot --base-href /FRONTEND/
+        run: ng build --aot --base-href /frontend/
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Build with Jekyll
