--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -32,6 +32,8 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 18
+      - name: Install Angular CLI
+        run: npm i -g @angular/cli
       - name: Install dependencies
         run: npm install
       - name: Build Angular app with AOT
