--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -20,7 +20,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repo
+      - name: Checkout en Repo
         uses: actions/checkout@v3
       - name: Configurar Node.Js
         uses: actions/setup-node@v3
@@ -32,10 +32,21 @@ jobs:
         run: npm install
       - name: Generar paquete
         run: ng build --aot --base-href /frontend/
-      - name: Zippear paquete
-        run: tar -zcvf Package.taz.gz ./dist/pastelesfe/
+      - name: Create Package
+        id: create_package
+        run: |
+          tar -zcvf PrePackage.tar.gz ./dist/pastelesfe/
+          echo "::set-output name=package_path::PrePackage.tar.gz"
       - name: Subir paquete
         uses: actions/upload-artifact@v3
         with:
           name: dist
           path: Package.taz.gz
+      - name: Generate Download Link
+        id: download
+        run: echo "Download the package [here](./${{ steps.create_package.outputs.package_path}})"
+      - name: Set Output
+        id: set_output
+        run: echo "::set-output name=download_link::${{ steps.download.outputs.download }}"
+      
+        
