--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -28,6 +28,8 @@ jobs:
           node-version: 18
       - name: Configurar credenciales de Google Cloud
         run: echo "${{ secrets.GDRIVE_CREDS }}" > google-creds.json
+      - name: Global Credentials
+        run: export GOOGLE_APPLICATION_CREDENTIALS=google-creds.json
       - name: Instalar Angular CLI
         run: npm i -g @angular/cli
       - name: Instalar dependencias
@@ -43,10 +45,7 @@ jobs:
           sudo apt-get install -y python3-pip
           pip3 install gupload
           export PATH=$PATH:~/.local/bin
-          
       - name: Subir archivo a Google Drive
-        env:
-            GDRIVE_FOLDER_ID: ${{ secrets.GDRIVE_FOLDER_ID }}
         run: |
-            gupload --to "$GDRIVE_FOLDER_ID" PrePackage.tar.gz --service-account google-creds.json
+            gupload --to ${{ secrets.GDRIVE_FOLDER_ID }} --file PrePackage.tar.gz PrePackage.tar.gz
         
