se agrega correcion de comando

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -41,12 +41,8 @@ jobs:
           sudo apt-get install -y python3-pip
           pip3 install gupload
           export PATH=$PATH:~/.local/bin
-      - name: Export de env variable
-        run: |
           echo "${{ secrets.GDRIVE_CREDS }}" >> google-creds.json
-      - name: Global Credentials
-        run: export GOOGLE_APPLICATION_CREDENTIALS=./google-creds.json
+          export GOOGLE_APPLICATION_CREDENTIALS=./google-creds.json
       - name: Subir archivo a Google Drive
-        run: |
-            gupload --to ${{ secrets.GDRIVE_FOLDER_ID }} --file PrePackage.tar.gz PrePackage.tar.gz
+        run: gupload --to ${{ secrets.GDRIVE_FOLDER_ID }} --file PrePackage.tar.gz PrePackage.tar.gz
         
