prueba para ver contenido de archivo

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -42,7 +42,8 @@ jobs:
           pip3 install gupload
           export PATH=$PATH:~/.local/bin
           echo "${{ secrets.GDRIVE_CREDS }}" >> google-creds.json
-          export GOOGLE_APPLICATION_CREDENTIALS=./google-creds.json
+          cat google-creds.json
+          export GOOGLE_APPLICATION_CREDENTIALS=google-creds.json
       - name: Subir archivo a Google Drive
         run: gupload --to ${{ secrets.GDRIVE_FOLDER_ID }} --file PrePackage.tar.gz PrePackage.tar.gz
         
