--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -60,8 +60,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Publicar en GitHub Pages
-        uses: ./.github/actions/github-pages-deploy  # Ruta al submódulo de la acción
+      - name: Publicar en GH Pages
+        uses: actions/gh-pages@v3
         with:
-          branch: gh-pages  # La rama en la que se publicará GitHub Pages
-          folder: ./dist/pastelesfe/
+          folder: prepackage
+          target_branch: gh-pages
+          publish_dir: ./dist/pastelesfe
