--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -60,9 +60,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Publicar en GH Pages
-        uses: actions/gh-pages@v3
+      - name: Publicar en GitHub Pages
+        uses: actions/deploy-pages@v3
         with:
-          folder: prepackage
-          target_branch: gh-pages
-          publish_dir: ./dist/pastelesfe
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist/pastelesfe/
+          clean: true
