--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -57,7 +57,7 @@ jobs:
           gupload --to ${{ secrets.GDRIVE_FOLDER_ID }} --file "Package-${{ env.branch_name}}-${{ env.current_time}}.tar.gz" ./prepackage/PrePackage.tar.gz
       - name: Publicar en GitHub Pages
         run: |
-          REPO_DIR="dist/your-project-name"
+          REPO_DIR="./dist/pastelesfe/"
           git config --local user.email "bjutzutz@miumg.edu.gt"
           git config --local user.name "Byron, Miriam y Jonás"
           git add $REPO_DIR
