pipeline para gh pages

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -55,12 +55,11 @@ jobs:
         run: |
           export GOOGLE_APPLICATION_CREDENTIALS=google-creds.json
           gupload --to ${{ secrets.GDRIVE_FOLDER_ID }} --file "Package-${{ env.branch_name}}-${{ env.current_time}}.tar.gz" ./prepackage/PrePackage.tar.gz
-      - name: Publicar en GitHub Pages
-        run: |
-          REPO_DIR="./dist/pastelesfe/"
-          git config --local user.email "bjutzutz@miumg.edu.gt"
-          git config --local user.name "Byron, Miriam y Jonás"
-          git add $REPO_DIR
-          git commit -m "Despliegue de la última versión"
-          git subtree split --prefix $REPO_DIR -b gh-pages
-          git push -f origin gh-pages:gh-pages
+      - name: Instalar Angular CLI GH Pages
+        run: npm i angular-cli-ghpages --save-dev
+      - name: Generar paquete para GH Pages
+        run: ng build --aot --base-href "https://umganalisis2.github.io/FRONTEND/"
+      - name: Deploy GH
+        run: npx angular-cli-ghpages --dir=dist/pastelesfe
+      
+        
