--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -57,12 +57,18 @@ jobs:
           gupload --to ${{ secrets.GDRIVE_FOLDER_ID }} --file "Package-${{ env.branch_name}}-${{ env.current_time}}.tar.gz" ./prepackage/PrePackage.tar.gz
       - name: Crear rama GH
         run: git branch gh-pages
-             git checkout gh-pages
-      - name: Build App
+      - name: Checkout branch
+        run: git checkout gh-pages
+      - name: Checkout -b
         run: git checkout -b gh-pages
-          git push origin gh-pages
-          npm install -g angular-cli-ghpages
-          ng build --aot --base-href https://umganalisis2.github.io/FRONTEND/
-          ngh --dir=dist/pastelesfe
+      - name: Push
+        run: git push origin gh-pages
+      - name: Install CLI GH Pages
+        run: npm install -g angular-cli-ghpages
+      - name: Build with base href
+        run: ng build --aot --base-href https://umganalisis2.github.io/FRONTEND/
+      - name: Deploy
+        run: ngh --dir=dist/pastelesfe
+        
       
         
