--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,8 @@
             ],
             "styles": [
               "src/styles.css",
-              "src/assets/lib/bootstrap/bootstrap.min.css"
+              "src/assets/lib/bootstrap/bootstrap.min.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js"
