--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@sweetalert2/ngx-sweetalert2": "^12.2.0",
     "bootstrap": "^5.3.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.7.1",
+    "ngx-toastr": "^17.0.2",
     "ngx-ui-loader": "^13.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.7.32",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
